--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,9 @@
         <input id="password" type="password" [(ngModel)]="password" name="password" pPassword required maxlength="15">
       </div>
       <button type="submit" pButton label="Đăng nhập"></button>
+      <div class="p-field">
+        <p>Tạo tài khoản mới? <a routerLink="register">Register</a> </p>
+      </div>
     </form>
     <div *ngIf="loginFailed" class="error-message">
       User hoặc password không đúng
