--- a/src/app/page-not-found/page-not-found.component.css
+++ b/src/app/page-not-found/page-not-found.component.css
@@ -1,3 +1,9 @@
+/* Reset CSS */
+body {
+    background-image: url('/assets/img/anhnen/anhnen.png');
+    background-size: cover; /* Để đảm bảo ảnh nền kích thước phù hợp */
+    background-repeat: no-repeat;
+  }
 
 h1 {
     font-size: 173px;
@@ -7,5 +13,5 @@ h1 {
 p {
     margin-top: 16px;
     font-size: 42px;
-    color: red;
+    color: rgb(27, 154, 99);
 }
