--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,18 @@
-<h1>404</h1>
-<p>Page not found!!</p>
+
+<body class="ng-tns-0-0 error-page">
+    <div class="wrapper">
+        <div class="page-header error-page">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1 class="title">404</h1>
+                        <p class="lead">Page not found :(</p>
+                        <h4 class="description text-default"> Ooooups! Looks like you got lost. </h4>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>
+</body>
+
+
